<resources>
    <string name="app_name">PartSiliconLib</string>
    <string name="noConnection">ارتباط اینترنتی برقرار نیست، در صورت استفاده از VPN لطفا آنرا خاموش نمایید</string>
    <string name="btnRetry">سعی مجدد</string>
    <string name="btnCancel">انصراف</string>
    <string name="feedback">بازخورد</string>
    <string name="feedbackMsg">اگه از برنامه راضی بودی، با نظرت از ما حمایت کن</string>
    <string name="feedbackOk">باشه😊</string>
    <string name="feedbackNext">بعدا</string>
    <string name="feedbackNo">نه</string>
    <string name="feedbackTellUs">لطفا علت نارضایتی رو برای ما بفرست</string>
    <string name="title_activity_notif_list">اطلاعیه ها</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="errInConn">خطا در برقراری ارتباط</string>
    <string name="btnAction">نمایش</string>
    <string name="notif_empty">اطلاعیه جدیدی ندارید</string>
    <string name="yourAward">جایزه شما</string>
    <string name="freindGift">هدیه دوستت</string>
    <string name="InviteMessage">با معرفی اپ های زیر به دوستات، جایزه بگیر و یه هدیه هم به دوستت بده</string>
    <string name="refText">کد معرف را وارد کنید</string>
    <string name="oklabel">تایید</string>
    <string name="noref">ندارم</string>
    <string name="enterCode">اگر کد معرف دارید</string>
    <string name="msgsuccess">کد معرف تایید گردید هدیه شما تقدیم می گردد</string>
    <string name="msgfail">کد معرف صحیح نیست</string>
</resources>
