<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="com.partsilicon.partsiliconlib.ItemFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:background="@android:color/white"
    tools:context=".ItemFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listInvite"
        android:name="com.partsilicon.partsiliconlib.ItemFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        tools:context=".ItemFragment"
        tools:listitem="@layout/invite_item" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <ImageButton
            android:id="@+id/ib_share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/iv_app"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/tv_invited"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_app"
            app:srcCompat="@android:drawable/ic_menu_share" />

        <TextView
            android:id="@+id/tv_invitor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yourAward"

            app:layout_constraintBottom_toBottomOf="@+id/iv_app"
            app:layout_constraintEnd_toStartOf="@+id/iv_app"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_invited" />

        <TextView
            android:id="@+id/tv_invited"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/freindGift"

            app:layout_constraintBottom_toBottomOf="@+id/iv_app"
            app:layout_constraintEnd_toStartOf="@+id/tv_invitor"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ib_share" />

        <ImageView
            android:id="@+id/iv_app"
            android:layout_width="22dp"
            android:layout_height="25dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_invitor"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/checkbox_off_background" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:lines="2"
        android:text="@string/InviteMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>